--- a/StoreEnterprise/src/services/Store.Customers.API/Store.Customers.API.csproj
+++ b/StoreEnterprise/src/services/Store.Customers.API/Store.Customers.API.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="EasyNetQ" Version="8.0.0-beta8" />
       <PackageReference Include="MediatR" Version="12.0.1" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.14">
