--- a/StoreEnterprise/src/services/Store.Customers.API/appsettings.Development.json
+++ b/StoreEnterprise/src/services/Store.Customers.API/appsettings.Development.json
@@ -8,6 +8,9 @@
   "ConnectionStrings":{
     "DefaultConnection": "Server=localhost;Port=5433;Database=Customer;User Id=postgres;Password=aabb11ee;Integrated Security=true;Pooling=true;"
   },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
   "JwtSettings": {
     "Secret": "AGFDGlsdfl35@ggp234Q",
     "ExpirationInHours": 2,
