--- a/StoreEnterprise/src/services/Store.Customers.Service/Store.Customers.Service.csproj
+++ b/StoreEnterprise/src/services/Store.Customers.Service/Store.Customers.Service.csproj
@@ -7,7 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="EasyNetQ" Version="8.0.0-beta8" />
       <PackageReference Include="FluentValidation" Version="11.5.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -16,6 +15,8 @@
     <ItemGroup>
         
       <ProjectReference Include="..\..\building blocks\Core\Core.csproj" />
+        
+      <ProjectReference Include="..\..\building blocks\Store.MessageBus\Store.MessageBus.csproj" />
       <ProjectReference Include="..\Store.Customers.Application\Store.Customers.Application.csproj" />
     </ItemGroup>
 
